Add functionGenetico.png and update settings.json***
***Update reporte.aux and reporte.fls***

***Add functionGenetico.png to reporte.fls***

***Update reporte.fdb_latexmk***

***Update reporte.tex***

***Add functionGenetico.png to reporte.tex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     ],
     "cSpell.words": [
         "Ackley",
+        "graficación",
         "inicialización",
         "iterador",
         "Rosenbrock"
