--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ investigacion*
 !investigacion.tex
 presentation*
 !presentation.tex
+InvestProy*
+!InvestProy.tex
+!InvestProy.pdf
 
 # Ignorar archivos generados por LaTeX en la carpeta latex
 latex/*.aux
